objects/Billing_Schedule_Margin__c/Billing_Schedule_Margin__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Billing Schedule Margin</label>
</CustomObject>