objects/Billing_Schedule_Margin__c/fields/Billing_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Type__c</fullName>
    <description>Name of the Billing Schedule visual force page</description>
    <inlineHelpText>Values are &quot;Partner&quot; or &quot;Regular&quot;</inlineHelpText>
    <label>Billing Schedule Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>