objects/Billing_Schedule_Margin__c/fields/Margin_Left__c.field-meta.xml
<CustomField>
    <fullName>Margin_Left__c</fullName>
    <description>Amount of pixels to adjust the margin left</description>
    <inlineHelpText>Example: &quot;20px&quot;</inlineHelpText>
    <label>Margin-Left</label>
    <length>50</length>
    <type>Text</type>
</CustomField>