objects/Billing_Schedule_Margin__c/fields/Margin_Right__c.field-meta.xml
<CustomField>
    <fullName>Margin_Right__c</fullName>
    <description>Amount to margin right each list item</description>
    <inlineHelpText>Example: &quot;20px&quot;</inlineHelpText>
    <label>Margin-Right</label>
    <length>55</length>
    <type>Text</type>
</CustomField>